--- a/jwtAuthApi/jwtAuthApi.Services/jwtAuthApi.Services.csproj
+++ b/jwtAuthApi/jwtAuthApi.Services/jwtAuthApi.Services.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\jwtAuthApi.BusinessCore\jwtAuthApi.BusinessCore.csproj" />
+    <ProjectReference Include="..\jwtAuthApi.Domain\jwtAuthApi.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
