--- a/jwtAuthApi/jwtAuthApi/jwtAuthApi.Application.csproj
+++ b/jwtAuthApi/jwtAuthApi/jwtAuthApi.Application.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="JWT" Version="5.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
@@ -17,7 +18,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\jwtAuthApi.BusinessCore\jwtAuthApi.BusinessCore.csproj" />
     <ProjectReference Include="..\jwtAuthApi.Domain\jwtAuthApi.Domain.csproj" />
+    <ProjectReference Include="..\jwtAuthApi.Infraestructure\jwtAuthApi.Infraestructure.csproj" />
+    <ProjectReference Include="..\jwtAuthApi.Repository\jwtAuthApi.Repository.csproj" />
+    <ProjectReference Include="..\jwtAuthApi.Services\jwtAuthApi.Services.csproj" />
   </ItemGroup>
 
 </Project>
