--- a/jwtAuthApi/jwtAuthApi/jwtAuthApi.Application.csproj
+++ b/jwtAuthApi/jwtAuthApi/jwtAuthApi.Application.csproj
@@ -5,16 +5,24 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\repository\git\jwtAuthApi\jwtAuthApi\jwtAuthApi\jwtAuthApi.Application.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
+    <PackageReference Include="InsideTechConf.Library.HealthCheck" Version="1.0.1" />
     <PackageReference Include="JWT" Version="5.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
     <PackageReference Include="Serilog.Sinks.Trace" Version="2.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +31,12 @@
     <ProjectReference Include="..\jwtAuthApi.Infraestructure\jwtAuthApi.Infraestructure.csproj" />
     <ProjectReference Include="..\jwtAuthApi.Repository\jwtAuthApi.Repository.csproj" />
     <ProjectReference Include="..\jwtAuthApi.Services\jwtAuthApi.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="jwtAuthApi.Application.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
