--- a/jwtAuthApi/jwtAuthApi/appsettings.json
+++ b/jwtAuthApi/jwtAuthApi/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "TokenConfigurations": {
+  "TokenConfiguration": {
     "Subject": "Admin",
     "Audience": "jwtPortal",
     "Issuer": "jwtAuthApi",
