--- a/jwtAuthApi/jwtAuthApi/appsettings.Development.json
+++ b/jwtAuthApi/jwtAuthApi/appsettings.Development.json
@@ -5,5 +5,12 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "TokenConfiguration": {
+    "Subject": "Admin",
+    "Audience": "jwtPortal",
+    "Issuer": "jwtAuthApi",
+    "ExpirationInSeconds": 120,
+    "SercretKey": "RTFstcKsx0FGjAXuXOYg5MbeJ1XT0uFiwPVvXCrk"
   }
 }
