--- a/jwtAuthApi/jwtAuthApi/appsettings.Development.json
+++ b/jwtAuthApi/jwtAuthApi/appsettings.Development.json
@@ -7,10 +7,8 @@
     }
   },
   "TokenConfiguration": {
-    "Subject": "Admin",
     "Audience": "jwtPortal",
     "Issuer": "jwtAuthApi",
-    "ExpirationInSeconds": 120,
-    "SercretKey": "RTFstcKsx0FGjAXuXOYg5MbeJ1XT0uFiwPVvXCrk"
+    "ExpirationInSeconds": 120
   }
 }
