--- a/jwtAuthApi/jwtAuthApi/appsettings.json
+++ b/jwtAuthApi/jwtAuthApi/appsettings.json
@@ -6,10 +6,8 @@
   },
   "AllowedHosts": "*",
   "TokenConfiguration": {
-    "Subject": "Admin",
     "Audience": "jwtPortal",
     "Issuer": "jwtAuthApi",
-    "ExpirationInSeconds": 120,
-    "SercretKey": "RTFstcKsx0FGjAXuXOYg5MbeJ1XT0uFiwPVvXCrk"
+    "ExpirationInSeconds": 120
   }
 }
